--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
