--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -3,6 +3,7 @@ charset-normalizer==3.4.4
 idna==3.11
 numpy==2.3.4
 pandas==2.3.3
+pandas-sacct==1.2.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.5
