--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,12 +1,17 @@
-certifi==2025.10.5
+certifi==2025.11.12
 charset-normalizer==3.4.4
+dotenv==0.9.9
 idna==3.11
-numpy==2.3.4
+mysql-connector-python==9.4.0
+numpy==2.0.2
 pandas==2.3.3
 pandas-sacct==1.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 requests==2.32.5
+setuptools==80.9.0
 six==1.17.0
 tzdata==2025.2
 urllib3==2.5.0
+wheel==0.45.1
