Building geojson now stores list of departments. Added script to find unused buildings

--- a/data/maps/building_department_mapping.json
+++ b/data/maps/building_department_mapping.json
@@ -74,6 +74,22 @@
       "department": "Agronomy and Horticulture"
     },
     {
+      "building": "Agronomy & Horticulture Greenhouse 4",
+      "department": "Agronomy and Horticulture"
+    },
+    {
+      "building": "Agronomy & Horticulture Greenhouse 3",
+      "department": "Agronomy and Horticulture"
+    },
+    {
+      "building": "Agronomy & Horticulture Greenhouse 2",
+      "department": "Agronomy and Horticulture"
+    },
+    {
+      "building": "Agronomy & Horticulture Greenhouse 1",
+      "department": "Agronomy and Horticulture"
+    },
+    {
       "building": "Beadle Center",
       "department": "Biochemistry"
     },
